--- a/Project/login.html
+++ b/Project/login.html
@@ -42,7 +42,7 @@
        <h1 class="heading"> Tourism </h1>
    </header> 
    <main>
-    <div class="design">
+    <div class="design d-flex flex-row justify-content-end">
    
        <h2>Login</h2>
        <label for="username">Username</label>
