--- a/deals.html
+++ b/deals.html
@@ -20,12 +20,13 @@
             <h1 class="favourite-place-card-heading">Basic</h1>
             <br>
             <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/tajmahal-img.png"
+            src="/Project/images/beach image.jpg"
             class="favourite-place-card-image"
           /><br>
             <p class="favourite-place-card-description">
               <b> 150$  Per day</b>
             </p>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
           
         </div>
@@ -36,9 +37,10 @@
             <p class="favourite-place-card-description">
                 <b> 250$  Per day</b>
             </p>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/golden-temple-img.png"
+            src="/Project/images/register image.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -49,9 +51,10 @@
             <p class="favourite-place-card-description">
                 <b> 350$  Per day</b>
             </p>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/mysore-palace-img.png"
+            src="/Project/images/california.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -62,13 +65,14 @@
             <p class="favourite-place-card-description">
                 <b> 450$  Per day</b>
             </p>
+            <button class="btn btn-primary">Add to Cart</button>
           </div>
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/varanasi-temple-img.png"
+            src="/Project/images/new york.jpg"
             class="favourite-place-card-image"
           />
         </div>
       </div>
-      <button class="btn btn-primary">Cart</button>
+      
 </body>
 </html>
