--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
             </p>
           </div>
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/tajmahal-img.png"
+            src="/Project/images/new york.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -37,7 +37,7 @@
             </p>
           </div>
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/golden-temple-img.png"
+            src="/Project/images/california.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -51,7 +51,7 @@
             </p>
           </div>
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/mysore-palace-img.png"
+            src="/Project/images/washington.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -64,7 +64,7 @@
             </p>
           </div>
           <img
-            src="https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/varanasi-temple-img.png"
+            src="/Project/images/chicago.jpg"
             class="favourite-place-card-image"
           />
         </div>
