small changes to the css

--- a/public/home.html
+++ b/public/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Project/styles/home.css">
+    <link rel="stylesheet" href="/public/styles/home.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -23,7 +23,7 @@
             </p>
           </div>
           <img
-            src="/Project/images/new york.jpg"
+            src="/public/images/new york.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -37,7 +37,7 @@
             </p>
           </div>
           <img
-            src="/Project/images/california.jpg"
+            src="/public/images/california.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -51,7 +51,7 @@
             </p>
           </div>
           <img
-            src="/Project/images/washington.jpg"
+            src="/public/images/washington.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -64,7 +64,7 @@
             </p>
           </div>
           <img
-            src="/Project/images/chicago.jpg"
+            src="/public/images/chicago.jpg"
             class="favourite-place-card-image"
           />
         </div>
