changes made in Faqs html and added new cart html page

--- a/public/deals.html
+++ b/public/deals.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Project/styles/deals.css">
+    <link rel="stylesheet" href="/public/styles/deals.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -18,16 +18,15 @@
         <div class="favourite-place-card-container d-flex flex-row">
           <div>
             <h1 class="favourite-place-card-heading">Basic</h1>
-            <br>
-            <img
-            src="/Project/images/beach image.jpg"
-            class="favourite-place-card-image"
-          /><br>
             <p class="favourite-place-card-description">
               <b> 150$  Per day</b>
             </p>
             <button class="btn btn-primary">Add to Cart</button>
           </div>
+          <img
+          src="/public/images/beach image.jpg"
+          class="favourite-place-card-image"
+        />
           
         </div>
   
@@ -40,7 +39,7 @@
             <button class="btn btn-primary">Add to Cart</button>
           </div>
           <img
-            src="/Project/images/register image.jpg"
+            src="/public/images/register image.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -54,7 +53,7 @@
             <button class="btn btn-primary">Add to Cart</button>
           </div>
           <img
-            src="/Project/images/california.jpg"
+            src="/public/images/california.jpg"
             class="favourite-place-card-image"
           />
         </div>
@@ -68,7 +67,7 @@
             <button class="btn btn-primary">Add to Cart</button>
           </div>
           <img
-            src="/Project/images/new york.jpg"
+            src="/public/images/new york.jpg"
             class="favourite-place-card-image"
           />
         </div>
