--- a/public/FAQS.html
+++ b/public/FAQS.html
@@ -4,12 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/public/styles/Faqs.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <title>FAQS</title>
 </head>
 <body>
-    
+    <div class="bg-color">
+        <h1 class="heading"> FAQS </h1>
+        <div>
+            <h3>Q: What type of plans are available?</h3>
+            <p>We have Basic Economy Premium Luxury </p>
+        </div>
+        <div>
+            <h3>Q: Do we need an account to select a plan?</h3>
+            <p>Yes</p>
+        </div>
+        <div>
+            <h3>Q: Can we upgrade the plan in the middle of the trip?</h3>
+            <p>Yes</p>
+        </div>
+        <div>
+            <h3>Q: </h3>
+        </div>
+
+        
+    </div>
 </body>
 </html>
