--- a/public/deals.html
+++ b/public/deals.html
@@ -1,84 +1,146 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-  <title>Cart | Hotel Little Village</title>
-  <link rel="stylesheet" href="/public/styles/cart.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script type="module" src="scripts/main.js"></script>
+	<title>Demo</title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<script type="module" src="scripts/main.js"></script>
     <script type="module" src="scripts/user-script.js"></script>
+	<script src="https://unpkg.com/cart-localstorage@1.1.4/dist/cart-localstorage.min.js" type="text/javascript"></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bold" href="#">Tours and Travel</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto fw-bold">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="User.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="deals.html">Deals</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="FAQS.html">Faqs</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link">
-              <button class="btn btn-sm btn-outline-danger" id="logout" type="submit">Logout</button>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <!-- (A) CART -->
-  <div id="cart-wrap">
-    <!-- (A1) PRODUCTS LIST -->
-    <div id="cart-products"></div>
+	<nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
+		<div class="container-fluid">
+		  <a class="navbar-brand font-weight-bold" href="#">Tours and Travel</a>
+		  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+			aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarNav">
+			<ul class="navbar-nav ml-auto font-weight-bold">
+			  <li class="nav-item">
+				<a class="nav-link" aria-current="page" href="User.html">Home</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link active" href="deals.html">Deals</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link" href="FAQS.html">Faqs</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link">
+				  <button class="btn btn-sm btn-outline-danger" id="logout" type="submit">Logout</button>
+				</a>
+			  </li>
+			</ul>
+		  </div>
+		</div>
+	  </nav>
+	<div class="container">
+		<h2>Plans</h2>
 
-    <!-- (A2) CURRENT CART ITEMS -->
-    <div id="cart-items"></div>
-  </div>
+		<div class="card-deck mt-4 mb-4 text-center">
+			<div class="card mb-4 shadow-sm">
+				<img src="/public/images/beach image.jpg" class="card-img-top" alt="home">
+				<div class="card-header">
+					<h4 class="my-0 font-weight-normal">Basic</h4>
+				</div>
+				<div class="card-body">
+					<h3 class="card-title pricing-card-title">150$ Per day</h3>
+					<button type="button" class="btn btn-block btn-outline-primary"
+						onClick="cartLS.add({id: 1, name: 'Basic', price: 150})">Add to
+						Cart</button>
+				</div>
+			</div>
+			<div class="card mb-4 shadow-sm">
+				<img src="/public/images/register image.jpg" class="card-img-top" alt="home">
+				<div class="card-header">
+					<h4 class="my-0 font-weight-normal">Economy</h4>
+				</div>
+				<div class="card-body">
+					<h3 class="card-title pricing-card-title">250$ Per day</h3>
+					<button type="button" class="btn btn-block btn-outline-primary"
+						onClick="cartLS.add({id: 2, name: 'Economy', price: 250})">Add to
+						Cart</button>
+				</div>
+			</div>
+			<div class="card mb-4 shadow-sm">
+				<img src="/public/images/california.jpg" class="card-img-top" alt="home">
+				<div class="card-header">
+					<h4 class="my-0 font-weight-normal">Premium</h4>
+				</div>
+				<div class="card-body">
+					<h3 class="card-title pricing-card-title">350$ Per day</h3>
+					<button type="button" class="btn btn-block btn-outline-primary"
+						onClick="cartLS.add({id: 3, name: 'Premium', price: 350})">Add to
+						Cart</button>
+				</div>
+			</div>
+			<div class="card mb-4 shadow-sm">
+				<img src="/public/images/new york.jpg" class="card-img-top" alt="home">
+				<div class="card-header">
+					<h4 class="my-0 font-weight-normal">Luxury</h4>
+				</div>
+				<div class="card-body">
+					<h3 class="card-title pricing-card-title">450$ Per day</h3>
+					<button type="button" class="btn btn-block btn-outline-primary"
+						onClick="cartLS.add({id: 4, name: 'Premium', price: 450})">Add to
+						Cart</button>
+				</div>
+			</div>
+		</div>
 
-  <!-- (B) TEMPLATES -->
-  <!-- (B1) PRODUCT CELL -->
-  <template id="template-product">
-    <div class="p-item">
-      <img class="p-img" />
-      <div class="p-name"></div>
-      <div class="p-desc"></div>
-      <div class="p-price"></div>
-      <button class="cart p-add">Add To Cart</button>
-    </div>
-  </template>
+		<div class="card mb-4 shadow-sm">
+			<div class="card-header">
+				<h2>Cart</h2>
+			</div>
+			<div class="card-body">
+				<table class="table">
+					<tbody class="cart">
+					</tbody>
+					<tfoot>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td class="text-right">Total: <strong class="total"></strong></td>
+						<td></td>
+					</tfoot>
+				</table>
+			</div>
+		</div>
+	</div>
+	<script>
+		function renderCart(items) {
+			const $cart = document.querySelector(".cart")
+			const $total = document.querySelector(".total")
 
-  <!-- (B2) CART ITEMS -->
-  <template id="template-cart" >
-    <div class="c-item">
-      <div class="c-name"></div>
-      <button class="c-del cart">X</button>
-      <input class="c-qty" type="number" min="0" />
-    </div>
-  </template>
-  <template id="template-cart-checkout">
-    <!-- <button class="c-empty cart" onclick="cart.nuke()">Empty</button> -->
-    <button class="c-checkout cart" onclick="cart.checkout()">Checkout</button>
-  </template>
+			$cart.innerHTML = items.map((item) => `
+					<tr>
+						<td>#${item.id}</td>
+						<td>${item.name}</td>
+						<td>${item.quantity}</td>
+						<td style="width: 60px;">	
+							<button type="button" class="btn btn-block btn-sm btn-outline-primary"
+								onClick="cartLS.quantity(${item.id},1)">+</button>
+						</td>
+						<td style="width: 60px;">	
+							<button type="button" class="btn btn-block btn-sm btn-outline-primary"
+								onClick="cartLS.quantity(${item.id},-1)">-</button>
+						</td>
+						<td class="text-right">$${item.price}</td>
+						<td class="text-right"><Button class="btn btn-primary" onClick="cartLS.remove(${item.id})">Delete</Button></td>
+					</tr>`).join("")
 
-  <script src="/public/scripts/products.js"></script>
-  <script src="/public/scripts/cart.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
+			$total.innerHTML = "$" + cartLS.total()
+		}
+		renderCart(cartLS.list())
+		cartLS.onChange(renderCart)
+	</script>
 </body>
 
 </html>
